[package]
name = "choice"
version = "0.1.0"
authors = ["Guacharo <https://github.com/YellingOilbird.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rayon = "1.1"
reduce = "0.1"
num-traits = "0.2"
near-sdk = "4.0.0-pre.4"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
borsh = "*"
wee_alloc = { version = "0.4.5", default-features = false, features = [] }
bs58 = "0.3"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
